--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             <p class="start_text">Get notified about company updates, news and blog posts. We hate spam.</p>
             <form class="start_form" action="">
                 <input class="start_input"    placeholder="Enter your email"  type="email">
-                <button class="button start_button">Get Sterted</button>
+                <button class="button start_button">Get Started</button>
             </form>
             <label class="start_label">
                 <input class="start_checkbox" type="checkbox">
