--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
     </section>
     <section class="inbox">
         <div class="container flex flex_inbox-column">
-            <div class="container-image">
-                <img class="container-image_img" src="./img/Inbox/Wheel.svg" alt="img_inbox">
+            <div class="inbox_container-image">
+                <img class="container-image_img inbox_image" src="./img/Inbox/Wheel.svg" alt="img_inbox">
             </div>
             <div class="info">
                 <p class="info_pretitle info_pretitle-orange">
@@ -125,8 +125,8 @@
                     Get Started
                 </button>
             </div>
-            <div class="container-image">
-                <img class="container-image_img" src="./img/Communication/Smartphone.png" alt="img_communication">
+            <div class="communication_container-image">
+                <img class="container-image_img communication_image" src="./img/Communication/Smartphone.png" alt="img_communication">
             </div>
         </div>
         <div class="container flex communication_container flex_communication-column">
