--- a/index.html
+++ b/index.html
@@ -46,8 +46,28 @@
             </div>
         </div>
    </header>
-   <section>
-
+   <section class="main">
+        <div class="container main_container">
+            <div>
+                <h1 class="main_title">
+                    Build stunning websites & apps.
+                </h1>
+                <p class="main_text">
+                    Create live segments and target the right people for messages based on their behaviors.                    
+                </p>
+                <div>
+                    <button class="button main_button">
+                        Get Started
+                    </button>
+                    <button class="button main_button main_button-white">
+                        Learn More
+                    </button>
+                </div>
+            </div>
+            <div>
+                <img class="main_img" src="./img/Main/Main.png" alt="main img">
+            </div>
+        </div>
    </section>
    <section class="questions">
         <div class="container flex flex_questions">
@@ -227,6 +247,71 @@
             </div>
         </div> 
     </section>
+    <section class="hiring">
+        <div class="hiring_container">
+            <div class="hiring_description">
+                <h1 class="hiring_title-wide">
+                    We’re hiring
+                </h1>
+                <p class="info_text hiring_text-wide">
+                    We’re a team of lifelong learners. We’re equal parts left and right brained.
+                </p>
+                <button class="button hiring_button">
+                    More about Company
+                </button>
+            </div>
+            <div>
+                <div class="vacancies">
+                    <div class="flex">
+                        <p class="vacancy_pretitle">
+                            Front-End Developer
+                        </p>
+                        <p class="vacancy_pretitle-lower">
+                            Los Angeles / Remote
+                        </p>
+                        <p class="vacancy-icon">
+                            >
+                        </p>
+                    </div>
+                    <p class="vacancy_text">
+                        Everything you need to start building – including open-source code, documentation.
+                    </p>
+                </div>
+                <div class="vacancies">
+                    <div class="flex">
+                        <p class="vacancy_pretitle">
+                            Community Manager
+                        </p>
+                        <p class="vacancy_pretitle-lower">
+                            New York / Full-Time
+                        </p>
+                        <p class="vacancy-icon">
+                            >
+                        </p>
+                    </div>
+                    <p class="vacancy_text">
+                        Everything you need to start building – including open-source code, documentation.
+                    </p>
+                </div>
+                <div class="vacancies">
+                    <div class="flex">
+                        <p class="vacancy_pretitle">
+                            UX/UI Designer
+                        </p>
+                        <p class="vacancy_pretitle-lower">
+                            New York / Full-Time
+                        </p>
+                        <p class="vacancy-icon">
+                            >
+                        </p>
+                    </div>
+                    <p class="vacancy_text">
+                        Everything you need to start building – including open-source code, documentation.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
     <section class="photos">
         <div class="container">
             <div class="photos_descriprion">
@@ -268,6 +353,128 @@
                 </span>
             </label>
         </div>
-    </section>  
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_container footer_flex">
+                <div>
+                    <div class="footer_logo logo_flex">
+                        <img src="./img/Footer/Footer_logo.svg" alt="logo">
+                        <div>
+                            <h6 class="footer_title-logo">
+                                Foundation
+                            </h6>
+                            <p class="footer_text-logo">
+                                Startup landing template
+                            </p>
+                        </div>
+                    </div>
+                    <p class="footer_text">
+                        Foundation is a website template for startups and small teams. It helps to build a website in no time.
+                    </p>
+                    <div class="footer_links">
+                        <a href="#" class="footer_link">
+                            <img class="footer_img" src="./img/Footer/AppStore.png" alt="logo">
+                        </a>
+                        <a href="#" class="footer_link">
+                            <img class="footer_img" src="./img/Footer/Google Play.png" alt="logo">
+                        </a>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="footer_title">
+                        Product
+                    </h3>
+                    <ul>
+                        <li>
+                            <p class="footer_text-big">
+                                Acquire Users
+                            </p>
+                        </li>
+                        <li>
+                            <p class="footer_text-big">
+                                Content Marketing
+                            </p>
+                        </li>
+                        <li>
+                            <p class="footer_text-big">
+                                Website Templates
+                            </p>
+                        </li>
+                        <li>
+                            <p class="footer_text-big">
+                                Customer Management
+                            </p>
+                        </li>
+                        <li>
+                            <p class="footer_text-big">
+                                Virtual Inbox
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3 class="footer_title">
+                        Company
+                    </h3>
+                    <ul>
+                        <li>
+                            <p class="footer_text-big">
+                                About Foundation
+                            </p>
+                        </li>
+                        <li>
+                            <p class="footer_text-big">
+                                Brand Guidelines
+                            </p>
+                        </li>
+                        <li>
+                            <p class="footer_text-big">
+                                Press Kit
+                            </p>
+                        </li>
+                        <li>
+                            <p class="footer_text-big">
+                                Support
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer_border"></div>
+        <div class="footer_container-lower footer_flex">
+            <ul class="footer_ul">
+                <li class="footer_li">
+                    <p class="footer_text-small">
+                        Terms
+                    </p>
+                </li>
+                <li class="footer_li">
+                    <p class="footer_text-small">
+                        Privacy
+                    </p>
+                </li>
+                <li class="footer_li">
+                    <p class="footer_text-small">
+                        License
+                    </p>
+                </li>
+            </ul>
+            <ul class="footer_ul">
+                <li class="footer_li">
+                    <img src="./img/Footer/icon-twitter.png" alt="icon twitter">
+                </li>
+                <li class="footer_li">
+                    <img src="./img/Footer/icon-fb.png" alt="icon fb">
+                </li>
+                <li class="footer_li">
+                    <img src="./img/Footer/LinkedIn.png" alt="icon LinkedIn">
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="./script/script.js"></script>
 </body>
 </html>
